--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,4 +4,4 @@ main:
   - title: "Research"
     url: /research/
   - title: "Resume"
-    url: https://docs.google.com/document/d/1kDqBgNh1GTQlViHs-PRQfryn3e1sF--f66mhIuul_GQ/edit?usp=sharing
+    url: https://drive.google.com/file/d/1XJqfB78pL3htSknYhJff9dn8TufK1c8J/view?usp=sharing
