--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 main:
   - title: "About"
     url: /about/
+  - title: "Blog"
+    url: /blog/
   - title: "Research"
     url: /research/
   - title: "Resume"
