--- a/_config.yml
+++ b/_config.yml
@@ -60,17 +60,20 @@ plugins:
 author:
   name   : "Nora Tseng"
   avatar : "/assets/images/headshot_2024-circle.png"
-  bio    : "Undergraduate CS Student at UW-Madison. I'm interested in Machine Learning topics including Natural Langauge Processing and Reinforcement Learning."
+  bio    : "Undergraduate CS Student at UW-Madison"
   links:
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       url: "https://github.com/nytseng"
+    - label: "Linked-In"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/nora-tseng-694520196/"
+    - label: "Website"
+      icon: "fas fa-fw fa-link"
+      url: "https://nytseng.github.io/"
+    # - label: "Twitter"
+    #   icon: "fab fa-fw fa-twitter-square"
+    #   url: "https://twitter.com/"
     # - label: "Instagram"
     #   icon: "fab fa-fw fa-instagram"
     #   url: "https://instagram.com/"
