--- a/_config.yml
+++ b/_config.yml
@@ -92,16 +92,16 @@ footer:
 
 defaults:
   # _posts
-  # - scope:
-  #     path: ""
-  #     type:  pages # posts
-  #   values:
-  #     layout: single
-  #     author_profile: true
-  #     read_time: true
-  #     comments: true
-  #     share: true
-  #     related: true
+  - scope:
+      path: ""
+      type:  pages # posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
   # _pages
   - scope:
       path: "_pages"
