--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ defaults:
   # _posts
   - scope:
       path: ""
-      type:  pages # posts
+      type:  posts
     values:
       layout: single
       author_profile: true
