--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 main:
   - title: "About"
     url: /about/
-  - title: "Blog"
+  - title: "Projects"
     url: /blog/
-  - title: "Research"
-    url: /research/
+  # - title: "Research"
+  #   url: /research/
   - title: "Resume"
     url: https://drive.google.com/file/d/1XJqfB78pL3htSknYhJff9dn8TufK1c8J/view?usp=sharing
